--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,10 @@
-body{
-    background-color: #B22222;
+body {
+    background-image: url(https://c.tenor.com/VLao5JKHOEwAAAAC/chamber-valorant-valorant-chamber.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    text-align: center;
 }
-
 .container{
 
     width: 80%;
@@ -13,6 +16,19 @@ h1{
     text-align: center;
     color: #fff;
     font-weight: bolder;
+    font-size: 2em;
+}
+h2{
+    text-align: center;
+    color: #fff;
+    font-weight: bolder;
+    font-size: 2em;
+}
+h3{
+    text-align: center;
+    color: #fff;
+    font-weight: bolder;
+    font-size: 2em;
 }
 
 .img_corpo{
@@ -29,7 +45,7 @@ figure{
 
 p{
    font-size: 1.5em; 
-   color:#fff;
+   color:rgb(255, 255, 255);
    font-weight: bold;
    text-indent: 50px;
    text-align: justify;
