--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,7 +9,10 @@ body {
 
     width: 80%;
     margin:auto;
-   
+ 
+}
+menu{
+
 }
 
 h1{
@@ -71,6 +74,31 @@ p1{font-size: 1.5em;
     text-align: justify;
     text-align: center;
 }
+footer{ text-align: center;
+    background-color:slategrey;
+    font-style: bolder;
+    font-size: 1em;
+    text-shadow: 2px 2px 5px rgb(0, 0, 0);
+
+}
+.botao{
+    background-color: rgb(202, 34, 34);/* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    text-shadow: 0 0 3px #000000;
+    
+  }
+  .botao {border-radius: 8px;}
+  .botao:hover {
+    background-color: #e27272d5; /* Green */
+    color: white;
+  }
+
 .coisinha{
     text-align: center;
 }
@@ -78,8 +106,8 @@ p1{font-size: 1.5em;
     margin-right: -100%;
     
 }
-audio::-webkit-media-controls-play-button,
-audio::-webkit-media-controls-panel {
+.audio::-webkit-media-controls-play-button,
+.audio::-webkit-media-controls-panel {
     background-color: rgb(221, 43, 67);
   color:skyblue;
 footer{
@@ -89,43 +117,4 @@ footer{
     font-size: 1.5em; 
    
    text-align: justify;
-}
-.botao{
-        background-color: #ff0707; /* Green */
-        border: none;
-        color: white;
-        padding: 12px 5px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 25px;
-        
-        
-      }
-      .botao {
-        text-shadow: 2px 2px 5px rgb(0, 0, 0);
-      }
-      
-      .botao {
-        margin: auto;
-        width: 8%;
-        border: 3px solid rgb(0, 0, 0);
-        padding: 10px;
-      }
-      .botao {border-radius: 8px;}
-.botao p{
-    text-indent: 0;
-    text-align: center;
-    font-size: 1.3em;
-}
-
-.botao a:link, .botao a:visited{
-    color: #ffffff;
-    text-decoration: none;
-    text-align: center;
-}
-
-.botao:hover{
-    background-color: #ec3c3c;
-    text-align: center;
 }
