--- a/site2.css
+++ b/site2.css
@@ -5,8 +5,8 @@ h1{
     font-size: 2em;
 }
 .img_corpo{
-    width: 40%
-    text-align:center ;
+    width: 40%;
+    text-align: center;
 }
 .body {
     background-image: url(https://c.tenor.com/VLao5JKHOEwAAAAC/chamber-valorant-valorant-chamber.gif);
