--- a/css/estilo.css
+++ b/css/estilo.css
@@ -123,11 +123,11 @@ footer{ text-align: center;
     background-color: rgb(221, 43, 67);
   color:skyblue;
   text-shadow: 2px 2px 5px rgb(0, 0, 0);
+}
 footer{
     background-color: rgb(221, 43, 67);
     padding-top: 0.6%;
     padding-bottom: 2%;
     font-size: 1.5em; 
-   
    text-align: justify;
 }
