--- a/css/stylee.css
+++ b/css/stylee.css
@@ -26,7 +26,9 @@ html {
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
     cursor: pointer
 }
-
+.row{
+    position: fixed;
+}
 
 h1 {
     text-align: center;
@@ -72,6 +74,9 @@ h6 {
 
 .img_corpo {
     width: 40%;
+    margin-top: 1,5%;
+    margin-inline: 1,5%;
+    z-index: -1000;
 }
 
 figure {
@@ -80,6 +85,7 @@ figure {
 
 .img_topo {
     width: 100%;
+    margin-top: 9%;
 }
 
 p {
@@ -98,17 +104,6 @@ p {
     text-align: justify;
     text-align: center;
 }
-
-footer {
-    text-align: center;
-    background-color: slategrey;
-    font-style: bolder;
-    font-size: 1em;
-    text-shadow: 2px 2px 5px rgb(0, 0, 0);
-
-
-}
-
 .itens_menu {
     align-self: center;
 }
@@ -154,7 +149,7 @@ footer {
 }
 
 footer {
-    background-color: rgb(221, 43, 67);
+    background-color: rgba(148, 0, 0, 0.699);
     padding-top: 0.6%;
     padding-bottom: 2%;
     font-size: 1.5em;
@@ -191,3 +186,65 @@ footer {
     display: table;
     clear: both;
   }
+  form {
+    box-sizing: border-box;
+    font-family: 'DancingScript-VariableFont_wght',cursive;
+  }
+  .form{
+    background-color: rgba(128,128,128, 0.5) ;
+    padding: 20px;
+    border-radius: 10px;
+  }
+  input[type=text], input[type=tel], input[type=email], select, textarea {
+    width: 90%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 25px;
+    resize: vertical;
+    font-family: 'DancingScript-VariableFont_wght',cursive;    
+  }
+  label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+    font-family: 'DancingScript-VariableFont_wght',cursive;    
+  }
+
+  input[type=submit] {
+    background-color:rgba(128,128,128, 0.5)  ;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+    font-family: 'DancingScript-VariableFont_wght',cursive;    
+  }
+
+  input[type=submit]:hover {
+    background-color: #dddada ;
+    font-family: 'DancingScript-VariableFont_wght',cursive;    
+  }
+
+  .col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+  }
+  
+  .col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+  }
+
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+
+
