--- a/stylee.css
+++ b/stylee.css
@@ -197,5 +197,24 @@ footer {
     display: table;
     clear: both;
   }
- 
-  
+  table, th, td {
+    border: 3px dashed #a400d6;
+    padding: 1.5%;
+    text-align: center;
+    font-family: 'DancingScript-VariableFont_wght',cursive;
+  }
+
+td:first-child { 
+    width: 40%;  
+}
+td:first-child + td {  
+    width: 60%; 
+}
+
+th{
+
+    font-size: 1.5em;
+    font-weight: bolder;
+    color 
+
+}
